--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img class="position-absolute top-0 start-0 " src="images/Ellipse 7.png" alt="">
         <img class="position-absolute start-0 bottom-0 " src="images/Ellipse 8.png" alt="">
 
-        <div class="container pt-5">
+        <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <h1 class="banner-caption">
